[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grocery-deal-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "apify-client>=1.7.0",
    "anyio>=4.0.0",
    "certifi>=2024.1.1",
    "httpcore>=1.0.0",
    "idna>=3.4",
    "jiter>=0.4.0",
    "distro>=1.8.0",
    "docstring-parser>=0.15",
    "sniffio>=1.3.0",
    "pydantic>=2.5.0",
    "pydantic-core>=2.14.0",
    "annotated-types>=0.6.0",
    "typing-inspection>=0.4.0",
    "typing-extensions>=4.8.0",
    "h11>=0.14.0",
    "apify-shared>=1.1.0",
    "colorama>=0.4.6",
    "impit>=0.1.0",
    "more-itertools>=9.0.0",
    "dotenv>=0.9.9",
]

[project.scripts]
grocery-deal-finder= "main:main_cli"
 
[tool.setuptools.packages.find]
where = ["."]
include = ["agents*"]
